# Terminal_chat_bot

./: .gitignore  README.md  app.py  prueba.py  pyproject.toml  requeriments.txt
gptclient/: __init__.py  __main__.py  app.py  assistant.py  chat.py  chat_config.json  database.py  logs.py  messages.py  methods.py  options.py  payloads.py  run_app.py  runs.py  threads.py
gptclient/screens/: assistants_screen.py
gptclient/style/: chat_style.tcss
