[project]
name = "gptclient"
version = "1.1.0"
description = "Terminal-Chat-Bot"
requires-python = ">=3.11.2"
dependencies = [
    "click>=8.1",
    "markdown-it-py>=3.0.0",
    "openai>=1.2.3",
    "prompt-toolkit>=3.0.40",
    "textual>=2.0.1",
]

[project.scripts]
gptclient = "gptclient.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
